Addressing Julian's comments